<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Concerts</string>
    <string name="like">My Concerts</string>
    <string name="add">Add a new concert</string>
    <string name="addButton">Add Concert</string>
    <string name="addToast">Concert Added!</string>
    <string name="artistName">Artist </string>
    <string name="venue">Venue </string>
    <string name="date">Date </string>
    <string name="setDate">Set Date</string>
    <string name="listen">Listen</string>
    <string name="comments">Comments </string>
    <string name="update">Edit Concert</string>
    <string name="updateButton">Update</string>
    <string name="updateToast">Concert Updated!</string>
    <string name="delete">Delete Concert</string>
    <string name="deleteToast">Concert Deleted!</string>
    <string name="doneUpdating">Done Updating</string>
    <string name="deleteButton">Delete</string>
    <string name="viewConcert">View Concert</string>
    <string name="viewConcertCal">Tap icon to view concert on calender</string>
    <string name="title_activity_update_concert">UpdateConcert</string>
    <string name="title_activity_add_concert">AddConcert</string>
    <string name="title_activity_delete_concert">DeleteConcert</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_dbmanager">DBManager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_artist">ViewArtist</string>

    <string-array name="sortBy">
        <item>Artist - Ascending</item>
        <item>Artist - Descending</item>
        <item>Venue - Ascending</item>
        <item>Venue - Descending</item>
    </string-array>
</resources>
