<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        style="@style/titleBar"
        android:id="@+id/updateTitle"
        android:text="@string/update"/>

    <TableLayout
        style="@style/my_table"
        android:id="@+id/addTable"
        android:layout_below="@id/updateTitle">
        <TableRow>
            <TextView
                style="@style/largeText"
                android:text="@string/artistName"/>
        </TableRow>
        <TableRow>
            <EditText
                style="@style/tableEditText"
                android:id="@+id/updateName"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/venue"
                style="@style/largeText"/>
        </TableRow>
        <TableRow>
            <EditText
                style="@style/tableEditText"
                android:id="@+id/updateVenue"/>
        </TableRow>

        <TableRow>
            <TextView
                style="@style/largeText"
                android:text="@string/date"/>
        </TableRow>
        <TableRow>
            <EditText
                style="@style/tableEditText"
                android:id="@+id/updateDate"/>
        </TableRow>

        <TableRow>
            <TextView
                style="@style/largeText"
                android:text="@string/comments"/>
        </TableRow>
        <TableRow>
            <EditText
                style="@style/tableEditText"
                android:id="@+id/updateComments"/>
        </TableRow>



    </TableLayout>

    <ImageButton
        android:id="@+id/updateConcertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/done"
        android:padding="20dp"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
